fix: query item row vertical spacing symmetry

--- a/src/components/reusable/queryBuilder/queryBuilderRule.scss
+++ b/src/components/reusable/queryBuilder/queryBuilderRule.scss
@@ -79,13 +79,13 @@
   }
 }
 
-// Slider needs more space to be usable
+// Slider: use negative margins to contain its extra height within the row
 .qb-rule__value.qb-rule__value--slider {
   flex: 1 1 150px;
   min-width: 150px;
   padding: 0 16px;
   box-sizing: border-box;
-  transform: translateY(3px);
+  margin: -6px 0;
 
   kyn-slider-input {
     width: 100%;
